Refactor authentication and book management services
Replaces code duplication with dedicated service methods for authentication and book-based operations. Simplifies controller logic, updates registration and login flows, consolidates endpoint definitions, and introduces role-based access for admin-specific routes.